--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ a {
     font-weight: 600;
     border: none;
     background: none;
+    cursor: pointer;
 }
 
 .automation-image-container {
@@ -291,6 +292,7 @@ a {
     font-weight: 600;
     border: none;
     background: none;
+    cursor: pointer;
 }
 
 .testing-image-container {
